--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ header .text-header .btn a:nth-child(even){
         justify-content: center;
     }
      header .img-header img{
-        width: 85%;
+        width: 100px;
         margin-top: 50px;
      }
     header{
