--- a/public/template/beauty_1/beauty1.html
+++ b/public/template/beauty_1/beauty1.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-            <div class="content px-4">
+            <div class="content">
                 <div id="all-link" class="d-block" style="opacity: 1;">
                     <!-- Contact -->
                     <div class="contact">
