--- a/public/template/basic_template/assets/css/style-custom.css
+++ b/public/template/basic_template/assets/css/style-custom.css
@@ -943,7 +943,8 @@ body {
     padding-right: 90px !important;
   }
   .content .trending .swiper-container .swiper-wrapper .swiper-slide a .box-trending .img-trending {
-    height: 170px;
+    height: auto;
+    max-height: 170px;
   }
   .content .trending .swiper-container .swiper-wrapper .swiper-slide a .box-trending .info-trending .description-trending h6 {
     font-size: 10px !important;
@@ -992,7 +993,8 @@ body {
   }
   .content .best-seller a .box-best .img-best {
     border-radius: 15px;
-    height: 120px;
+    height: auto;
+    max-height: 120px;
   }
   .content .best-seller a .box-best .info-best .description-best h6 {
     font-size: 10px;
