--- a/public/template/basic_template/assets/scss/_responsive.scss
+++ b/public/template/basic_template/assets/scss/_responsive.scss
@@ -140,7 +140,8 @@
                         a{
                             .box-trending{
                                 .img-trending{
-                                    height: 170px;
+                                    height: auto;
+                                    max-height: 170px;
                                 }
                                 .info-trending{
                                     .description-trending{
@@ -206,7 +207,8 @@
                     padding: 10px;
                     .img-best{
                         border-radius: 15px;
-                        height: 120px;
+                        height: auto;
+                        max-height: 120px;
                     }
                     .info-best{
                         .description-best{
