--- a/public/template/basic_template/basictemplate.html
+++ b/public/template/basic_template/basictemplate.html
@@ -260,7 +260,7 @@
                                     <a class="goto-detail" href="detail-page.html">
                                         <div class="box-trending bg-instagram">
                                             <div class="img-trending">
-                                                <img src="assets/image/1.jpg" alt="">
+                                                <img src="assets/image/product.png" alt="">
                                             </div>
                                             <div class="info-trending">
                                                 <div class="description-trending">
@@ -277,25 +277,7 @@
                                     <a class="" href="">
                                         <div class="box-trending bg-instagram">
                                             <div class="img-trending">
-                                                <img src="assets/image/1.jpg" alt="">
-                                            </div>
-                                            <div class="info-trending">
-                                                <div class="description-trending">
-                                                    <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut odit quidem consequuntur deleniti libero voluptatibus debitis, </h6>
-                                                    <div class="d-flex justify-content-between align-items-center">
-                                                        <p>Rp. 125.000</p>
-                                                        
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a class="" href="">
-                                        <div class="box-trending bg-instagram">
-                                            <div class="img-trending">
-                                                <img src="assets/image/1.jpg" alt="">
+                                                <img src="assets/image/product.png" alt="">
                                             </div>
                                             <div class="info-trending">
                                                 <div class="description-trending">
@@ -313,7 +295,7 @@
                                     <a class="" href="">
                                         <div class="box-trending bg-instagram">
                                             <div class="img-trending">
-                                                <img src="assets/image/1.jpg" alt="">
+                                                <img src="assets/image/product.png" alt="">
                                             </div>
                                             <div class="info-trending">
                                                 <div class="description-trending">
@@ -331,7 +313,25 @@
                                     <a class="" href="">
                                         <div class="box-trending bg-instagram">
                                             <div class="img-trending">
-                                                <img src="assets/image/1.jpg" alt="">
+                                                <img src="assets/image/product.png" alt="">
+                                            </div>
+                                            <div class="info-trending">
+                                                <div class="description-trending">
+                                                    <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut odit quidem consequuntur deleniti libero voluptatibus debitis, </h6>
+                                                    <div class="d-flex justify-content-between align-items-center">
+                                                        <p>Rp. 125.000</p>
+                                                        
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a class="" href="">
+                                        <div class="box-trending bg-instagram">
+                                            <div class="img-trending">
+                                                <img src="assets/image/product.png" alt="">
                                             </div>
                                             <div class="info-trending">
                                                 <div class="description-trending">
@@ -426,7 +426,7 @@
                                 <a href="">
                                     <div class="box-best">
                                         <div class="img-best">
-                                            <img src="assets/image/1.jpg" alt="">
+                                            <img src="assets/image/product.png" alt="">
                                         </div>
                                         <div class="info-best">
                                             <div class="description-best">
@@ -444,7 +444,7 @@
                                 <a href="">
                                     <div class="box-best">
                                         <div class="img-best">
-                                            <img src="assets/image/1.jpg" alt="">
+                                            <img src="assets/image/product.png" alt="">
                                         </div>
                                         <div class="info-best">
                                             <div class="description-best">
@@ -462,7 +462,7 @@
                                 <a href="">
                                     <div class="box-best">
                                         <div class="img-best">
-                                            <img src="assets/image/1.jpg" alt="">
+                                            <img src="assets/image/product.png" alt="">
                                         </div>
                                         <div class="info-best">
                                             <div class="description-best">
@@ -480,7 +480,7 @@
                                 <a href="">
                                     <div class="box-best">
                                         <div class="img-best">
-                                            <img src="assets/image/1.jpg" alt="">
+                                            <img src="assets/image/product.png" alt="">
                                         </div>
                                         <div class="info-best">
                                             <div class="description-best">
@@ -504,41 +504,6 @@
             <!-- Footer -->
             <div class="footer">
                 <p>2021 - Powered by Wibinx.com</p>
-            </div>
-        </div>
-
-        <div class="detail-page d-none" style="opacity: 0;">
-            <!-- Sampul -->
-            <div class="item-image">
-                <img src="assets/image/sampul-1.jpg" alt="sampul">
-                <div class="button-back">
-                    <a href="basictemplate.html">
-                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M6.5795 14.7994C6.90733 15.1493 7.435 15.145 7.758 14.7899C8.081 14.4347 8.07708 13.8632 7.74925 13.5132L3.27397 8.73622H14.6666C15.1268 8.73622 15.4999 8.33204 15.4999 7.83344C15.4999 7.33493 15.1268 6.93066 14.6666 6.93066H3.27947L7.74925 2.15962C8.07708 1.80968 8.081 1.23809 7.758 0.882935C7.435 0.527773 6.90733 0.523539 6.5795 0.873483L0.809348 7.03259C0.395256 7.47459 0.395256 8.19825 0.809348 8.64025L6.5795 14.7994Z" fill="white"/>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-            <div class="content detail px-4">
-                <div class="information">
-                    <h2>Telur Rebus Mix Chocolate</h2>
-                    <span><i>Trending</i></span>
-                    <p>Makanan yang diolah dengan bahan-bahan alami. Nyaman dikonsumsi dan siap disajikan pada acara apapun.</p>
-                </div>
-                <div class="pricing">
-                    <div class="preview">
-                        <label>
-                            <span class="currency">Rp</span>
-                            <span class="nominal">9.000.000</span>
-                        </label>
-                    </div>'
-                    <div class='d-flex'>
-                        <a class="btn-whatsapp" href="">
-                            <i class="fab fa-whatsapp"></i>
-                            <span>Tanya Whatsapp</span>
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
