--- a/public/template/basic_template/assets/scss/_buttons.scss
+++ b/public/template/basic_template/assets/scss/_buttons.scss
@@ -70,3 +70,11 @@
     background-color: #ececec;
     margin: 0 auto;
 }
+
+.btn-black{
+    border-radius: 7px;
+    background-color: var(--main-black-color);
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+}
