--- a/public/template/basic_template/basictemplate.html
+++ b/public/template/basic_template/basictemplate.html
@@ -52,8 +52,9 @@
                     <p class="mt-2 mt-sm-3">Tools menaruh semua link dalam satu micro website</p>
     
                     <div class="d-flex justify-content-center mt-4">
-                        <button id="btnAllLink" class="btn btn-light btn-active px-4 mr-2 rounded-pill" href="">All Link</button>
-                        <button id="btnKatalog" class="btn btn-light px-4 rounded-pill" href="">Katalog</button>
+                        <button id="btnAllLink" class="btn btn-light btn-active px-4 mx-1 rounded-pill" href="">All Link</button>
+                        <button id="btnKatalog" class="btn btn-light px-4 mx-1 rounded-pill" href="">Katalog</button>
+                        <button id="btnTentang" class="btn btn-light px-4 mx-1 rounded-pill" href="">Tentang</button>
                     </div>
                 </div>
     
@@ -108,7 +109,7 @@
                                 <div class="swiper-slide">
                                     <a class="" href="">
                                         <div class="box-social text-center d-flex flex-column align-items-center bg-tiktok">
-                                            <img src="assets/image/svg/youtube.svg" alt="">
+                                            <img src="assets/image/icon/tiktok.png" alt="">
                                             <div class="social-name">
                                                 <span>Tiktok</span>
                                             </div>
@@ -499,6 +500,97 @@
                     </div>
                 </div>
                 
+            </div>
+
+            <div id="tentang" class="d-none" style="opacity : 0">
+                <div class="tentang mt-5 px-4">
+                    <h3 class="sub-title">Wibinx craft joruney</h3>
+                    <img class="img-preview" onerror="this.src='assets/image/default-sampul.png'" src="assets/image/12.png" alt="sampul">
+
+                    <p class="deskripsi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate esse est obcaecati libero aut, unde eligendi at a. Sequi vel corporis temporibus laudantium dolorem magni perferendis quas, fugiat unde aut! <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eius nam veritatis ipsam culpa quam magni ab numquam expedita et! Quidem, harum omnis! Sint recusandae tenetur voluptatem saepe soluta rem.</p>
+                </div>
+
+                <div class="testimoni mt-5">
+                    <div class="sampul">
+                        <img onerror="this.src='assets/image/default-sampul.png'" src="assets/image/12.png" alt="sampul">
+                        <div class="overlay">
+                            <div class="title-sampul">
+                                <h3>Anjay Testimoni ?</h3>
+                                <p>lihat testimoni dari pelanggan kami</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-container swiperPagination list-testi">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="box-testi">
+                                    <div class="d-flex align-items-center">
+                                        <img src="" onerror="this.src='assets/image/default-sampul.png'" alt="">
+                                        <div class="profil d-flex flex-column">
+                                            <label for="">Yoga Permana</label>
+                                            <span>Programmer</span>
+                                        </div>
+                                    </div>
+
+                                    <p class="deskripsi">
+                                        “Saya suka dengan barang ini karena pertama, harganya murah. Kedua meskipun murah ini tidak murahan, karena kualitas produknya luar biasa.”
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="box-testi">
+                                    <div class="d-flex align-items-center">
+                                        <img src="" onerror="this.src='assets/image/default-sampul.png'" alt="">
+                                        <div class="profil d-flex flex-column">
+                                            <label for="">Yoga Permana</label>
+                                            <span>Programmer</span>
+                                        </div>
+                                    </div>
+
+                                    <p class="deskripsi">
+                                        “Saya suka dengan barang ini karena pertama, harganya murah. Kedua meskipun murah ini tidak murahan, karena kualitas produknya luar biasa.”
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="box-testi">
+                                    <div class="d-flex align-items-center">
+                                        <img src="" onerror="this.src='assets/image/default-sampul.png'" alt="">
+                                        <div class="profil d-flex flex-column">
+                                            <label for="">Yoga Permana</label>
+                                            <span>Programmer</span>
+                                        </div>
+                                    </div>
+
+                                    <p class="deskripsi">
+                                        “Saya suka dengan barang ini karena pertama, harganya murah. Kedua meskipun murah ini tidak murahan, karena kualitas produknya luar biasa.”
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-pagination" style="position: static;"></div>
+                    </div>
+                </div>
+
+                <div class="lokasi mt-5 px-4">
+                    <h3 class="sub-title">Yuk datang ke offline store kami!</h3>
+                    <p class="deskripsi">
+                        Jl. WR Supratman No.302, Kesiman Kertalangu, Kec. Denpasar Tim., Kota Denpasar, Bali 80237
+                    </p>
+
+                    <a class="btn btn-black" href="">Kunjungi</a>
+                </div>
+
+                <div class="promo">
+                    <label class="text-white">Promo Khusus Buat Kamu</label>
+                    <p class="text-white">Dapatkan promo menarik! Isi e-mailmu sekarang!</p>
+
+                    <div class="cover-subscription">
+                        <input type="text" class="form-control p-4" placeholder="Masukkan alamat emailmu">
+                        <button class="btn btn-block btn-promo-subscription">Subscribe</button>
+                    </div>
+                </div>
             </div>
     
             <!-- Footer -->
