Menambahkan konten web portofolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,17 +118,17 @@ footer .copyright p {
 }
 
 .article-card .card-body .thumbnail-container {
-  max-height: 300px;
+  max-height: 170px;
   margin-bottom: 30px;
 }
 
 .article-card .card-body .img-thumbnail {
   border: 0;
   border-radius: 0;
-  height: 250px;
+  height: 170px;
   width: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .article-card .card-body h3 {
