--- a/scss/frontend/component/_component.scss
+++ b/scss/frontend/component/_component.scss
@@ -10,15 +10,15 @@
         }
 
         .thumbnail-container {
-            max-height: 300px;
+            max-height: 170px;
             margin-bottom: 30px;
         }
         .img-thumbnail {
             border: 0;
             border-radius: 0;
-            height: 250px;
+            height: 170px;
             width: 100%;
-            object-fit: contain;
+            object-fit: cover;
         }
         padding: 0;
 
