--- a/scss/frontend/_color.scss
+++ b/scss/frontend/_color.scss
@@ -10,3 +10,6 @@ $primary-color-hover: #ac8e68;
 .bgc-primary{
     background-color: $primary-color !important;
 }
+.text-main {
+    color: $primary-color !important;
+}
