--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
   background-color: #CDAC81 !important;
 }
 
+.text-main {
+  color: #CDAC81 !important;
+}
+
 .button-primary {
   background-color: #CDAC81 !important;
   color: #00303F !important;
@@ -216,6 +220,27 @@ body a:focus {
 
 section.portofolio, section.article {
   margin-bottom: 120px;
+}
+
+section.experience span.jabatan {
+  font-weight: 400 !important;
+}
+
+section.experience .logo-perusahaan {
+  width: 180px;
+  height: 180px;
+}
+
+section.experience .logo-perusahaan .img-thumbnail {
+  height: 100% !important;
+  background-color: none !important;
+}
+
+section.experience .logo-perusahaan .img-thumbnail img {
+  width: 100%;
+  height: 170px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 a:hover {
