--- a/scss/frontend/pages/_home.scss
+++ b/scss/frontend/pages/_home.scss
@@ -33,3 +33,25 @@
 section.portofolio , section.article {
     margin-bottom: 120px;
 }
+
+section.experience {
+    span.jabatan {
+        font-weight: 400 !important;
+    }
+
+    .logo-perusahaan {
+        width: 180px;
+        height: 180px;
+        
+        .img-thumbnail {
+            height: 100% !important;
+            background-color: none !important;
+
+            img {
+                width: 100%;
+                height: 170px;
+                object-fit: contain;
+            }
+        }
+    }
+}
